--- a/Vision_Fully_Connected_Layer_Classification.ipynb
+++ b/Vision_Fully_Connected_Layer_Classification.ipynb
@@ -6,11 +6,7 @@
     "id": "OPxkBOetCFr_"
    },
    "source": [
-    "# Microsoft Vision classification example\n",
-    "This example shows an example of a simple way to classify images from any dataset using pretrained Microsoft Vision model.\n",
-    "\n",
-    "Using 1 GPU, under 10 minutes of training we can achieve score 92.92% accuracy on CIFAR-10 dataset using kNN algorithm.\n",
-    "We also show how to plug-in LinearClassification algorithm on top of frozen featues. "
+    "# Microsoft-Vision-ResNet50 based Hybrid Model using Linear Classifier"
    ]
   },
   {
@@ -90,22 +86,16 @@
    },
    "outputs": [],
    "source": [
-    "# Setup cell.\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from data_utils import get_CIFAR10_data\n",
     "\n",
-    "%matplotlib inline\n",
-    "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots\n",
-    "plt.rcParams['image.interpolation'] = 'nearest'\n",
-    "plt.rcParams['image.cmap'] = 'gray'\n",
     "\n",
-    "# for auto-reloading external modules\n",
-    "# see http://stackoverflow.com/questions/1907993/autoreload-of-modules-in-ipython\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "def rel_error(x, y):\n",
+    "def calculate_error(x, y):\n",
     "  \"\"\" returns relative error \"\"\"\n",
     "  return np.max(np.abs(x - y) / (np.maximum(1e-8, np.abs(x) + np.abs(y))))"
    ]
@@ -143,39 +133,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "6nABwBP2CFsC"
-   },
-   "source": [
-    "Let's define how we'll preprocess images. We can notice that Microsoft Vision model is using images in BGR format, hence the swapping of image channels at the end of preprocessing"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Preprocess:\n",
+    "class Wrangling:\n",
     "    def __init__(self):\n",
-    "        self.preprocess = transforms.Compose([\n",
+    "        self.wrangling = transforms.Compose([\n",
     "                                           transforms.Resize(224),\n",
     "                                           transforms.CenterCrop(224),\n",
     "                                           transforms.ToTensor(),\n",
     "                                           transforms.Normalize(mean=[0.406, 0.456, 0.485], std=[0.225, 0.224, 0.229])])\n",
     "\n",
     "    def __call__(self, x):\n",
-    "        return self.preprocess(x)[[2,1,0],:,:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "XyR7TRqCCFsC"
-   },
-   "source": [
-    "Import the CIFAR-10 dataset with division to train and test sets. This can be replaced with any dataset without any changes to the rest of the code."
+    "        return self.wrangling(x)[[2,1,0],:,:]"
    ]
   },
   {
@@ -217,7 +189,7 @@
     }
    ],
    "source": [
-    "# Load the (preprocessed) CIFAR-10 data.\n",
+    "\n",
     "data = get_CIFAR10_data()\n",
     "for k, v in list(data.items()):\n",
     "    print(f\"{k}: {v.shape}\")"
@@ -258,15 +230,8 @@
    "source": [
     "\n",
     "\n",
-    "train_dataset = CIFAR10('./path', download=True, train=True, transform=Preprocess())\n",
-    "test_dataset = CIFAR10('./path', download=True, train=False, transform=Preprocess())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And now, we are importing Microsoft Vision model with ResNet50 architecture. We are specifying that we want the pretrained version (same interface as torchvision)."
+    "train_dataset = CIFAR10('./path', download=True, train=True, transform=Wrangling())\n",
+    "test_dataset = CIFAR10('./path', download=True, train=False, transform=Wrangling())"
    ]
   },
   {
@@ -303,15 +268,6 @@
    ],
    "source": [
     "model = microsoftvision.models.resnet50(pretrained=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ARLZxnFOCFsE"
-   },
-   "source": [
-    "Microsoft vision model is just used to extract image features, without fine-tuning. Therefore we are setting it to evaluation mode. Let's use GPU to speed-up computation."
    ]
   },
   {
@@ -519,29 +475,20 @@
    },
    "outputs": [],
    "source": [
-    "def get_features(dataset, model):\n",
+    "def extractor(dataset, model):\n",
     "    all_features = []\n",
     "    all_labels = []\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for images, labels in progressbar(DataLoader(dataset, batch_size=128, num_workers=8)):\n",
-    "            images = images.cuda()\n",
+    "        for point, labels in progressbar(DataLoader(dataset, batch_size=128, num_workers=8)):\n",
+    "            point = point.cuda()\n",
     "            labels = labels.cuda()\n",
-    "            features = model(images)\n",
+    "            features = model(point)\n",
     "\n",
     "            all_features.append(features)\n",
     "            all_labels.append(labels)\n",
     "\n",
     "    return torch.cat(all_features).cpu(), torch.cat(all_labels).cpu()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "uuffYGqwCFsH"
-   },
-   "source": [
-    "We're extracting all image features from training and test set. Those features will be used to train the linear regression model and calculate accuracy score."
    ]
   },
   {
@@ -578,17 +525,8 @@
     }
    ],
    "source": [
-    "train_features, train_labels = get_features(train_dataset, model)\n",
-    "test_features, test_labels = get_features(test_dataset, model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "jWRknwEECFsJ"
-   },
-   "source": [
-    "Fit the classifier to the training set and then measure performance on test set. Whole operation will take less than 10 min using 1 GPU!"
+    "train_features, train_labels = extractor(train_dataset, model)\n",
+    "test_features, test_labels = extractor(test_dataset, model)"
    ]
   },
   {
@@ -608,13 +546,12 @@
     }
    ],
    "source": [
-    "# train features preprocessing\n",
+    "\n",
     "print(train_labels.dtype)                                                                                                                                                                                                                              \n",
     "print(train_features.dtype) \n",
     "train_labels = train_labels.to(dtype=torch.float)\n",
     "train = TensorDataset( train_features, train_labels)\n",
     "\n",
-    "# Create a data loader from the features\n",
     "train_loader = DataLoader(train, batch_size= 30,shuffle=True)"
    ]
   },
@@ -624,20 +561,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test features preprocessing\n",
-    "\n",
     "test_labels = test_labels.to(dtype=torch.float)\n",
     "test = TensorDataset( Tensor(test_features), Tensor(test_labels))\n",
-    "\n",
-    "# Create a data loader from the features\n",
     "test_loader = DataLoader(test, batch_size= 10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Custom Fully Connected Model"
    ]
   },
   {
@@ -661,8 +587,6 @@
     "        x = self.dropout_layer(self.relu(self.fc(x)))\n",
     "        x = self.out(x)\n",
     "        return x\n",
-    "\n",
-    "#instantiate our Neural Network class and moving it to the GPU\n",
     "network =  Network().cuda()"
    ]
   },
@@ -672,13 +596,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "#initialize Cross Entropy loss function\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "\n",
-    "\n",
-    "# set Adam as optimizer function\n",
-    "optimizer = optim.Adam(network.parameters(), lr=0.0001) # Optimizer\n"
+    "optimizer = optim.Adam(network.parameters(), lr=0.0001) \n"
    ]
   },
   {
@@ -704,18 +623,17 @@
     "        print('Epoch {}/{}'.format(epoch, num_epochs - 1))\n",
     "        print('-' * 10)\n",
     "\n",
-    "        model.train()  # Set model to training mode\n",
+    "        model.train()  \n",
     "\n",
     "\n",
     "        running_loss = 0.0\n",
     "        running_corrects = 0\n",
     "\n",
-    "        # Iterate over data.\n",
+    "     \n",
     "        for inputs, labels in progressbar(train_loader):\n",
     "            inputs, labels = inputs.to(device), labels.to(device)\n",
     "            labels = labels.to(dtype=torch.long)\n",
     "\n",
-    "            # zero the parameter gradients\n",
     "            optimizer.zero_grad()\n",
     "\n",
     "            outputs = model(inputs)\n",
@@ -724,17 +642,12 @@
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "\n",
-    "            # statistics\n",
+    "         \n",
     "            running_loss += loss.item() * inputs.size(0)\n",
     "            running_corrects += torch.sum(preds == labels.data)\n",
     "\n",
     "        epoch_loss = running_loss / dataset_sizes['train']\n",
     "        epoch_acc = running_corrects.double() / dataset_sizes['train']\n",
-    "\n",
-    "        print(' Loss: {:.4f} Acc: {:.4f}'.format(\n",
-    "             epoch_loss, epoch_acc))\n",
-    "\n",
-    "\n",
     "\n",
     "    time_elapsed = time.time() - since\n",
     "    print('Training complete in {:.0f}m {:.0f}s'.format(\n",
@@ -851,13 +764,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Testing the model with Test Dataset¶"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 35,
    "metadata": {},
@@ -886,11 +792,11 @@
     "        images, labels = images.to(device), labels.to(device)\n",
     "        outputs = model_ft(images)\n",
     "        _, predicted = torch.max(outputs.data, 1)\n",
-    "        total += labels.size(0)\n",
-    "        correct += (predicted == labels).sum().item()\n",
+    "        summ += labels.size(0)\n",
+    "        done += (predicted == labels).sum().item()\n",
+    "        \n",
     "\n",
-    "print('Accuracy of the network on the test images: %d %%' % (\n",
-    "    100 * correct / total))"
+    "print('Hybrid Model Performance Accuracy:', 100 * done / summ))"
    ]
   }
  ],
