--- a/Vision_KNN_Classification.ipynb
+++ b/Vision_KNN_Classification.ipynb
@@ -6,16 +6,12 @@
     "id": "OPxkBOetCFr_"
    },
    "source": [
-    "# Microsoft Vision classification example\n",
-    "This example shows an example of a simple way to classify images from any dataset using pretrained Microsoft Vision model.\n",
-    "\n",
-    "Using 1 GPU, under 10 minutes of training we can achieve score 92.92% accuracy on CIFAR-10 dataset using kNN algorithm.\n",
-    "We also show how to plug-in LinearClassification algorithm on top of frozen featues. "
+    "# Microsoft-Vision-ResNet50 based Hybrid Model using Linear Classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "6FOhnnunCFsB",
     "scrolled": true
@@ -29,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -60,19 +56,14 @@
    ],
    "source": [
     "\n",
-    "# TODO: Enter the foldername in your Drive where you have saved the unzipped\n",
     "# assignment folder, e.g. 'cs231n/assignments/assignment1/'\n",
     "FOLDERNAME = 'home/ubuntu/Vision-Classifiers/Microsoft-Vision-Classifier/'\n",
     "assert FOLDERNAME is not None, \"[!] Enter the foldername.\"\n",
     "\n",
-    "# Now that we've mounted your Drive, this ensures that\n",
-    "# the Python interpreter of the Colab VM can load\n",
-    "# python files from within it.\n",
+    "\n",
     "import sys\n",
     "sys.path.append('/home/ubuntu/Vision-Classifiers/Microsoft-Vision-Classifier')\n",
     "\n",
-    "# This downloads the CIFAR-10 dataset to your Drive\n",
-    "# if it doesn't already exist.\n",
     "%cd /$FOLDERNAME/datasets/\n",
     "!bash get_datasets.sh\n",
     "%cd /$FOLDERNAME"
@@ -80,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -104,29 +95,21 @@
    },
    "outputs": [],
    "source": [
-    "# Setup cell.\n",
+    "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from data_utils import get_CIFAR10_data\n",
     "\n",
-    "%matplotlib inline\n",
-    "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots\n",
-    "plt.rcParams['image.interpolation'] = 'nearest'\n",
-    "plt.rcParams['image.cmap'] = 'gray'\n",
-    "\n",
-    "# for auto-reloading external modules\n",
-    "# see http://stackoverflow.com/questions/1907993/autoreload-of-modules-in-ipython\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "def rel_error(x, y):\n",
-    "  \"\"\" returns relative error \"\"\"\n",
+    "def calculate_error(x, y):\n",
     "  return np.max(np.abs(x - y) / (np.maximum(1e-8, np.abs(x) + np.abs(y))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "8xq1JdtICFsA"
    },
@@ -137,30 +120,13 @@
     "from torch.utils.data import DataLoader\n",
     "from torchvision.datasets import CIFAR10\n",
     "import torchvision.transforms as transforms\n",
-    "import numpy as np\n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
     "import progressbar\n",
     "from progressbar import progressbar\n",
     "\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import microsoftvision"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "6nABwBP2CFsC"
-   },
-   "source": [
-    "Let's define how we'll preprocess images. We can notice that Microsoft Vision model is using images in BGR format, hence the swapping of image channels at the end of preprocessing"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import numpy as np\n",
+    "from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
@@ -169,30 +135,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Preprocess:\n",
+    "import microsoftvision"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Wrangling:\n",
     "    def __init__(self):\n",
-    "        self.preprocess = transforms.Compose([\n",
+    "        self.wrangling = transforms.Compose([\n",
     "                                           transforms.Resize(224),\n",
     "                                           transforms.CenterCrop(224),\n",
     "                                           transforms.ToTensor(),\n",
     "                                           transforms.Normalize(mean=[0.406, 0.456, 0.485], std=[0.225, 0.224, 0.229])])\n",
     "\n",
     "    def __call__(self, x):\n",
-    "        return self.preprocess(x)[[2,1,0],:,:]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "XyR7TRqCCFsC"
-   },
-   "source": [
-    "Import the CIFAR-10 dataset with division to train and test sets. This can be replaced with any dataset without any changes to the rest of the code."
+    "        return self.wrangling(x)[[2,1,0],:,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -229,7 +195,7 @@
     }
    ],
    "source": [
-    "# Load the (preprocessed) CIFAR-10 data.\n",
+    "\n",
     "data = get_CIFAR10_data()\n",
     "for k, v in list(data.items()):\n",
     "    print(f\"{k}: {v.shape}\")"
@@ -237,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -270,20 +236,13 @@
    "source": [
     "\n",
     "\n",
-    "train_dataset = CIFAR10('./path', download=True, train=True, transform=Preprocess())\n",
-    "test_dataset = CIFAR10('./path', download=True, train=False, transform=Preprocess())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "And now, we are importing Microsoft Vision model with ResNet50 architecture. We are specifying that we want the pretrained version (same interface as torchvision)."
+    "train = CIFAR10('./path', download=True, train=True, transform=Wrangling())\n",
+    "test = CIFAR10('./path', download=True, train=False, transform=Wrangling())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -318,17 +277,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "ARLZxnFOCFsE"
-   },
-   "source": [
-    "Microsoft vision model is just used to extract image features, without fine-tuning. Therefore we are setting it to evaluation mode. Let's use GPU to speed-up computation."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "id": "jGhy43gpCFsF"
    },
@@ -513,7 +463,7 @@
        ")"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,13 +475,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "id": "Wy9C-gEXCFsG"
    },
    "outputs": [],
    "source": [
-    "def get_features(dataset, model):\n",
+    "def extractor(dataset, model):\n",
     "    all_features = []\n",
     "    all_labels = []\n",
     "    import time\n",
@@ -540,10 +490,10 @@
     "    torch.cuda.empty_cache()\n",
     "\n",
     "    with torch.no_grad():\n",
-    "        for images, labels in progressbar.progressbar(DataLoader(dataset, batch_size=128, num_workers=8)):\n",
-    "            images = images.cuda()\n",
+    "        for point, labels in progressbar.progressbar(DataLoader(dataset, batch_size=128, num_workers=8)):\n",
+    "            point = point.cuda()\n",
     "            labels = labels.cuda()\n",
-    "            features = model(images)\n",
+    "            features = model(point)\n",
     "\n",
     "            all_features.append(features)\n",
     "            all_labels.append(labels)\n",
@@ -552,17 +502,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "uuffYGqwCFsH"
-   },
-   "source": [
-    "We're extracting all image features from training and test set. Those features will be used to train the linear regression model and calculate accuracy score."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -588,42 +529,30 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100% (391 of 391) |######################| Elapsed Time: 0:05:03 Time:  0:05:03\n",
-      "100% (79 of 79) |########################| Elapsed Time: 0:01:00 Time:  0:01:00\n"
+      "100% (391 of 391) |######################| Elapsed Time: 0:04:57 Time:  0:04:57\n",
+      "100% (79 of 79) |########################| Elapsed Time: 0:00:59 Time:  0:00:59\n"
      ]
     }
    ],
    "source": [
-    "train_features, train_labels = get_features(train_dataset, model)\n",
-    "test_features, test_labels = get_features(test_dataset, model)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "jWRknwEECFsJ"
-   },
-   "source": [
-    "Fit the classifier to the training set and then measure performance on test set. Whole operation will take less than 10 min using 1 GPU!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "id": "ReNnjgUkCFsK"
-   },
-   "outputs": [],
-   "source": [
-    "# You can plug-in any classifier\n",
-    "\n",
-    "#classifier = LogisticRegression(random_state=0, max_iter=1000, verbose=1, n_jobs=16)\n",
-    "classifier = KNeighborsClassifier(n_neighbors=5, n_jobs=16)"
+    "train_features, train_labels = extractor(train, model)\n",
+    "test_features, test_labels = extractor(test, model)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {
+    "id": "ReNnjgUkCFsK"
+   },
+   "outputs": [],
+   "source": [
+    "classifier = KNeighborsClassifier(n_neighbors=5, n_jobs=16)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "id": "Jj9aVXAJCFsK"
    },
@@ -632,15 +561,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 92.92\n"
+      "Hybrid Model Performance Accuracy: 92.92\n"
      ]
     }
    ],
    "source": [
     "classifier.fit(train_features, train_labels)\n",
     "predictions = classifier.predict(test_features)\n",
-    "accuracy = np.mean((test_labels == predictions).astype(np.float)) * 100.\n",
-    "print(f\"Accuracy: {accuracy}\")"
+    "result = 100 * np.mean((test_labels == predictions).astype(np.float))\n",
+    "print(f\"Hybrid Model Performance Accuracy: {result}\")"
    ]
   },
   {
